# taskchampion_client_rust

./: .gitattributes  .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml  rust_builder.yaml
.github/workflows/: README.md  ci-cd.yml  publish.yml  release-artifacts.yml
android/: build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/lib/: main.dart
example/lib/config/: app_config.dart
example/lib/screens/: home_screen.dart  settings_screen.dart  task_form_screen.dart
example/lib/services/: permission_service.dart  task_storage_service.dart
example/test/: widget_test.dart
hook/: build.dart  pubspec.yaml
lib/: taskchampion_client_rust.dart
lib/src/: taskchampion_client.dart
lib/src/models/: auth_config.dart  auth_config.freezed.dart  auth_config.g.dart  auth_result.dart  auth_result.freezed.dart  auth_result.g.dart  client_config.dart  client_config.freezed.dart  client_config.g.dart  models.dart  sync_config.dart  sync_config.freezed.dart  sync_config.g.dart  sync_result.dart  sync_result.freezed.dart  sync_result.g.dart  task.dart  task.freezed.dart  task.g.dart  task_filter.dart  task_priority.dart  task_property_ref.dart  task_sort.dart  task_status.dart
lib/src/rust_bridge/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  rust_bridge.dart
lib/src/services/: auth_service.dart  services.dart  sync_service.dart  task_service.dart
lib/src/utils/: helpers.dart  native_assets.dart  utils.dart
manifests/: native_assets.json
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: api.rs  frb_generated.rs  lib.rs
test/: taskchampion_client_rust_test.dart  virtual_tag_test.dart
test/integration/: server_integration_test.dart.skip
(+1 files in other folders)
