[package]
name = "tc_helper"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bridge for TaskChampion client library"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
flutter_rust_bridge = "=2.12.0"
flutter_rust_bridge_macros = "=2.12.0"
taskchampion = { version = "0.8.0", features = ["server-sync", "encryption"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json"] }
rand = "0.8"
hex = "0.4"
regex = "1.10"

[features]
# Experimental features (enabled via rust_builder.yaml configuration)
experimental = []

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
